-------------------------------------------------------------------------------
  Version 20190221 (2019-02-21)
-------------------------------------------------------------------------------
  * Initial release