@@ -2,11 +2,12 @@
 server 127.127.1.0
 fudge  127.127.1.0 stratum 10
 
-# Time source, where to get time from. Use the official
-# Brazilian government NTP servers provided by ntp.br.
-server a.st1.ntp.br    iburst prefer
-server b.st1.ntp.br    iburst
-server c.st1.ntp.br    iburst
+# Time source, where to get time from. NTP servers will be automatically
+# configured during installation based on your system timezone.  Brazilian
+# systems use the official ntp.br servers; others fall back to their
+# respective pool.ntp.org hosts.  You may edit this list after
+# installation if you prefer different servers.
+@NTP_SERVERS@
 
 driftfile       /var/lib/ntp/ntp.drift
 logfile         /var/log/ntp
@@ -20,7 +21,5 @@ restrict default kod nomodify notrap nopeer mssntp
 # Allow localhost
 restrict 127.0.0.1
 
-# Restrict to strictly serve time, nothing else
-restrict a.st1.ntp.br     mask 255.255.255.255    nomodify notrap nopeer noquery
-restrict b.st1.ntp.br     mask 255.255.255.255    nomodify notrap nopeer noquery
-restrict c.st1.ntp.br     mask 255.255.255.255    nomodify notrap nopeer noquery
+# Restrict to strictly serve time, nothing else. Adjust if you add
+# additional peers.
