@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240611 (2024-06-11)
+-------------------------------------------------------------------------------
+  * Auto-detect timezone during installation and select appropriate NTP servers
+  * Configuration can be changed manually after installation
+
+-------------------------------------------------------------------------------
   Version 20190221 (2019-02-21)
 -------------------------------------------------------------------------------
   * Initial release
